...
            }}
          />
          <Tab.Screen
            name="Jump"
            component={Jump}
            options={{
              tabBarButtonTestID: 'Tab.Jump',
              tabBarLabel: 'Jump',
              tabBarIcon: ({color}) => (
                <Icon
                  style={styles.icon}
                  fill={color}
                  name="calendar-outline"
...
