appId: com.saheeranas.diaryapp
onFlowComplete:
  - runFlow: '../common/teardown.yaml'
---
- launchApp
- waitForAnimationToEnd
- tapOn:
    id: 'Tab.Jump'
- tapOn:
    id: JumpScreen.Calendar.day_2024.07.04
- extendedWaitUntil:
    visible: 'Tap to Edit'
- tapOn:
    text: 'Tap to Edit'
- inputText: 'This is july 04 2024 entry'
- hideKeyboard
- extendedWaitUntil:
    visible: 'Save'
- tapOn: 'Save'
- extendedWaitUntil:
    visible: 'This is july 04 2024 entry'
- tapOn: 'This is july 04 2024 entry'
- extendedWaitUntil:
    visible: 'Discard'
- tapOn: 'This is july 04 2024 entry'
- eraseText: 150
- inputText: 'This is updated text'
- hideKeyboard
- extendedWaitUntil:
    visible: 'Save'
- tapOn: 'Save'
- assertVisible: 'This is updated text'
